--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "nodemon": "^2.0.12",
-    "stripe": "^8.178.0"
+    "stripe": "^8.178.0",
+    "uuid": "^8.3.2"
   }
 }
