--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
     "stripe": "^8.178.0",
     "uuid": "^8.3.2"
