complete ecom backend

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
     "stripe": "^8.178.0",
+    "twilio": "^3.75.0",
     "uuid": "^8.3.2"
   }
 }
